[gd_scene load_steps=11 format=3 uid="uid://1yrva4up37ii"]

[ext_resource type="PackedScene" uid="uid://cls37qlx3lwym" path="res://Assets/Aligator.gltf" id="1_nmxwh"]
[ext_resource type="Script" uid="uid://d0d3x7n5bpvi7" path="res://Scripts/alligatorcontroller.gd" id="2_u7kp0"]
[ext_resource type="Script" uid="uid://o3or0u0ao24j" path="res://Scripts/TEETH.gd" id="3_kgx0g"]

[sub_resource type="Animation" id="Animation_kgx0g"]
resource_name = "Arms Flail"
length = 0.5
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms/Skeleton3D:Arm2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 1, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arms/Skeleton3D:Arm2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.05, 0.05, 0)
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arms/Skeleton3D:rotation:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arms/Skeleton3D:rotation:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Arms/Skeleton3D:rotation:z")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 6.28319, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_u7kp0"]
resource_name = "Chomp"
length = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Skeleton3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Skeleton3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.0296848, -0.25, 0, 0.0333333, -0.0296848, 0, -0.1, 0, 0.0666667, -28.5),
"times": PackedFloat32Array(0, 0.1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Skeleton3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Skeleton3D:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.05, 0, 0.05, 0, 0, -0.1, 0, 0.0666667, -23.5),
"times": PackedFloat32Array(0, 0.0667104, 0.1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Skeleton3D:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.05, 0, 0.05, 0, 0, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.0667104, 0.1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head/Skeleton3D:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 1, 0, 0),
"points": PackedFloat32Array(-0.523599, -0.25, 0, 0.0666667, 0.523599, 0, 0, 0, 0, 0, 0.174533, -4.36902e-05, 0.825467, 0, 0.825467, 0, -0.1, 0, 0.0333333, 82),
"times": PackedFloat32Array(0, 0.0666667, 0.0667104, 0.1)
}

[sub_resource type="Animation" id="Animation_f1yp0"]
resource_name = "Close"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Skeleton3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Skeleton3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Skeleton3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Skeleton3D:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Skeleton3D:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head/Skeleton3D:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Arms/Skeleton3D:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Arms/Skeleton3D:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Arms/Skeleton3D:position:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_wnw72"]
resource_name = "Bite"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Skeleton3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Skeleton3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.0296848, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Skeleton3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Skeleton3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.523599)]
}

[sub_resource type="Animation" id="Animation_wqswa"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms/Skeleton3D:Arm2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arms/Skeleton3D:rotation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arms/Skeleton3D:rotation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arms/Skeleton3D:rotation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Skeleton3D:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head/Skeleton3D:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head/Skeleton3D:position:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Head/Skeleton3D:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Head/Skeleton3D:rotation:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Head/Skeleton3D:rotation:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Head/Skeleton3D:rotation:z")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1yp0"]
_data = {
&"Arms Flail": SubResource("Animation_kgx0g"),
&"Chomp": SubResource("Animation_u7kp0"),
&"Close": SubResource("Animation_f1yp0"),
&"Open": SubResource("Animation_wnw72"),
&"RESET": SubResource("Animation_wqswa")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_u7kp0"]
size = Vector3(0.00566959, 0.0151138, 0.0223083)

[node name="Alligator" instance=ExtResource("1_nmxwh")]
script = ExtResource("2_u7kp0")

[node name="Arms" parent="Arms/Skeleton3D" index="0"]
transform = Transform3D(0.99849, 0.0549327, 0, -0.0549327, 0.99849, 0, 0, 0, 1, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_f1yp0")
}

[node name="ToothFrontLeft" type="Area3D" parent="." index="4"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothFrontLeft" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.211278, 0.0570384, -0.0468741)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothFrontRight" type="Area3D" parent="." index="5"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothFrontRight" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.211278, 0.0570384, 0.0465816)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothFrontMidLeft" type="Area3D" parent="." index="6"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothFrontMidLeft" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.211278, 0.0570384, -0.0154272)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothFrontMidRight" type="Area3D" parent="." index="7"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothFrontMidRight" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.211278, 0.0570384, 0.0154281)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothDiagonalLeft" type="Area3D" parent="." index="8"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothDiagonalLeft" index="0"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, -0.176537, 0.0570384, -0.076541)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothDiagonalRight" type="Area3D" parent="." index="9"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothDiagonalRight" index="0"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -0.176537, 0.0570384, 0.0764077)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideL1" type="Area3D" parent="." index="10"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideL1" index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.140416, 0.0570384, -0.086028)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideL2" type="Area3D" parent="." index="11"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideL2" index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.109226, 0.0570384, -0.086028)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideL3" type="Area3D" parent="." index="12"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideL3" index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0783552, 0.0570384, -0.086028)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideL4" type="Area3D" parent="." index="13"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideL4" index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0472063, 0.0570384, -0.086028)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideL5" type="Area3D" parent="." index="14"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideL5" index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.015695, 0.0570384, -0.086028)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideR1" type="Area3D" parent="." index="15"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideR1" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.140804, 0.057, 0.086)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideR2" type="Area3D" parent="." index="16"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideR2" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.10897, 0.057, 0.086)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideR3" type="Area3D" parent="." index="17"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideR3" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0774342, 0.057, 0.086)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideR4" type="Area3D" parent="." index="18"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideR4" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0475936, 0.057, 0.086)
shape = SubResource("BoxShape3D_u7kp0")

[node name="ToothSideR5" type="Area3D" parent="." index="19"]
script = ExtResource("3_kgx0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToothSideR5" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0148821, 0.057, 0.086)
shape = SubResource("BoxShape3D_u7kp0")
